--- a/dz5CPU.vcxproj
+++ b/dz5CPU.vcxproj
@@ -128,12 +128,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CPU.h" />
+    <ClInclude Include="Laptop.h" />
     <ClInclude Include="RAM.h" />
     <ClInclude Include="SSD.h" />
     <ClInclude Include="VideoCard.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CPU.cpp" />
+    <ClCompile Include="Laptop.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="RAM.cpp" />
     <ClCompile Include="SSD.cpp" />
     <ClCompile Include="VideoCard.cpp" />
